# ANN-Practice

./: app.py  model.h5  pyproject.toml
